feat: harden agent e2e flows